tests/error/equalsInteger-list-integer--wrong-1st-argument.uplc
(program 1.0.0[[(builtin equalsInteger)(con list(integer) [42, 10, 53])](con integer 10)])